--- a/main.ipynb
+++ b/main.ipynb
@@ -18,6 +18,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/choonghwanlee/interpretableml-2-aipi590-f24/blob/main/main.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### The Data\n",
     "\n",
     "We will work with the Compas dataset, which contains information about criminals and whether they recidivated (re-commit a crime) in the next two years. The dataset came to public attention in 2016 after ProPublica published an article critiquing Northpointe's COMPAS recidivism algorithm for being racially biased against African Americans. \n",
