add pip install

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## install imodels to run the notebook\n",
+    "%pip install imodels"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 96,
    "metadata": {},
    "outputs": [],
